crates/cli/tests/snapshots/bool_comparison__fix_630b66ca8810d52f4e68ed1c8d68db36bce21a1cb65b60ec15b901e87b62c13a.snap
---
source: crates/cli/tests/bool_comparison.rs
expression: "\"false != h\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-false != h
+h
