crates/cli/tests/snapshots/bool_comparison__fix_a11a365119d2c64750d4253426c99db3e016d21e6183a706845dfed17d803393.snap
---
source: crates/cli/tests/bool_comparison.rs
expression: "\"b == true\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-b == true
+b
