crates/cli/tests/snapshots/bool_comparison__fix_a14c6695accf2da707eaeb76ded232840736b9034ef1b55d1c8c92b9f5098a14.snap
---
source: crates/cli/tests/bool_comparison.rs
expression: "\"false == m ? n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-false == m ? n
+!m ? n
